# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  compose.yaml  configuration.toml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: development.toml  local.toml  production.toml
src/: configuration.rs  email_client.rs  error.rs  lib.rs  main.rs  startup.rs  storage.rs  telemetry.rs  validator.rs
src/models/: subscriber.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
