[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = {version = "0.7.4", features = ["multipart", "macros"]}
chrono = { version = "0.4.34", features = ["serde"] }
config = "0.14.0"
serde = { version = "1.0.196", features = ["derive"] }
surrealdb = "1.2.0"
tokio = {version = "1.36.0", features = ["full"]}
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
once_cell = "1.19.0"
reqwest = "0.11.24"
